--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<a href="https://prtfo.github.io/">Назад на главную</a>
 		</div>
 	</header>
+	<div class="info"><a href="https://vk.com/doc119821997_550847240?hash=8d84517aef92df8e62&dl=b9668a6cef7f8e17f0" target="_blank">Перейти в источник вопросов</a></div>
 	<div class="body">
 		<div class="qwe">
 			1 <span class="otv">Защита информации</span> - это перечень мероприятий, направленных на достижение полной безопасности и защищенности сведений с целью предотвращения утечки информации
@@ -46,34 +47,34 @@
 			<span class="first">10</span> Каковы основные задачи в сфере обеспечения информационно» безопасности? <span class="otv"><a href="https://studopedia.ru/10_182554_kakovi-osnovnie-zadachi-v-oblasti-obespecheniya-informatsionnoy-bezopasnosti.html">Развернуть ответ</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">11</span>  <span class="otv"></span>
+			<span class="first">11</span> Предметом правового регулирования в информационной сфере являются. <span class="otv"><a href="https://bzbook.ru/Shpargalka-po-informaczionnomu-pravu-1.7.html">Развернуть ответ</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">12</span>  <span class="otv"></span>
+			<span class="first">12</span> Какие документы составляют правовую базу в информационной сфере? <span class="otv"><a href="https://www.yaklass.ru/p/informatika/11-klass/informatcionnaia-kultura-obshchestva-i-lichnosti-13421/informatcionnoe-pravo-i-etika-13142/re-57282241-61a0-4b09-9394-7742c8521779">Развернуть ответ</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">13</span>  <span class="otv"></span>
+			<span class="first">13</span> Права держателей (обладателей) массивов персональных данных <span class="otv"><a href="https://base.garant.ru/2569222/4d6cc5b8235f826b2c67847b967f8695/#friends">Развернуть ответ</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">14</span>  <span class="otv"></span>
+			<span class="first">14</span> Специальное разрешение на право осуществления юридическим лицом или индивидуальным предпринимателем конкретного вида деятельности <span class="otv">Лицензия</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">15</span>  <span class="otv"></span>
+			<span class="first">15</span> Нарушение требований ФЗ N-149 "Об информации, информационных технологиях и о защите информации" влечет за собой <span class="otv"><a href="https://base.garant.ru/12148555/a7b26eafd8fd23d18ca4410ac5359e0e/">Развернуть ответ(п.1)</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">16</span>  <span class="otv"></span>
+			<span class="first">16</span> Лицензирование деятельности по технической защите конфиденциальной информации осуществляет <span class="otv">ФСТЭК</span>
 		</div> 
 		<div class="qwe-2">
-			<span class="first">17</span>  <span class="otv"></span>
+			<span class="first">17</span> Какой срок действия лицензии? <span class="otv">от трех до двадцати пяти лет</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">18</span>  <span class="otv"></span>
+			<span class="first">18</span> Из чего состоит электронная цифровая подпись <span class="otv"><a href="https://crypto.kontur.ru/help/glossary">Развернуть ответ</a></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">19</span>  <span class="otv"></span>
+			<span class="first">19</span> Назовите две основные функции электронной цифровой подписи <span class="otv">Лёгкость проверки подлинности, высокая сложность подделки</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">20</span>  <span class="otv"></span>
+			<span class="first">20</span> Без чего невозможна проверка цифровой подписи <span class="otv">Без сертефиката</span>
 		</div>
 		
 	</div>
