--- a/index.html
+++ b/index.html
@@ -76,7 +76,36 @@
 		<div class="qwe-2">
 			<span class="first">20</span> Без чего невозможна проверка цифровой подписи <span class="otv">Без сертефиката</span>
 		</div>
-		
+		<div class="qwe-2">
+			<span class="first">21</span> Для решения проблем информационной безопасности необходима тесная координация деятельности всех субъектов. Перечислите эти субъекты. <span class="otv"><a href="https://studref.com/313182/ekonomika/subekty_informatsionnoy_bezopasnosti">Развернуть ответ</a></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">22</span> Для чего нужно применение криптографических методов и специальных средств защиты? <span class="otv"><a href="https://www.intuit.ru/studies/courses/16655/1300/lecture/25505?page=2">Развернуть ответ</a></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">23</span>  <span class="otv">Электронный документ</span> – это документированная информация, представленная в электронной форме, то есть в виде, пригодном для восприятия человеком с использованием электронных вычислительных машин, а также для передачи по информационно-телекоммуникационным сетям или обработки в информационных системах
+		</div>
+		<div class="qwe-2">
+			<span class="first">24</span> Какие способы идентификации неприемлемы для электронного документа? <span class="otv">ЭЦП, биометрические и тд</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">25</span> Что делает доказательственная функция? <span class="otv"><a href="https://studopedia.ru/12_24335_dokazatelstvennaya-funktsiya-zadatka.html">Развернуть ответ</a></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">26</span> Совокупность данных о предоставлении лицензий, переоформлении документов, подтверждающих наличие лицензий, приостановлении и возобновлении действия лицензий и об аннулировании лицензий <span class="otv">реестр лицензий</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">27</span> Нарушение законодательства Российской Федерации в области персональных данных влечет за собой <span class="otv"><a href="http://www.consultant.ru/document/cons_doc_LAW_34661/1f421640c6775ff67079ebde06a7d2f6d17b96db/">Развернуть ответ</a></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">28</span>  <span class="otv">Целостность </span> гарантия того, что информация сейчас существует в ее исходном виде, то есть при ее хранении или передаче не было произведено несанкционированных изменений.
+		</div>
+		<div class="qwe-2">
+			<span class="first">29</span> Любое умышленное изменение информации, хранящейся в вычислительной системе или передаваемой из одной системы в другую – это <span class="otv">Угроза целостности</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">30</span>  <span class="otv">ТехЗ КИ</span> выполнение работ и (или) оказание услуг по ее защите от несанкционированного доступа, от утечки по техническим каналам, а также от специальных воздействий на такую информацию в целях ее уничтожения, искажения или блокирования доступа к ней.
+		</div>
 	</div>
 </body>
 </html>
