--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>МДК 02.01</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -104,8 +105,119 @@
 			<span class="first">29</span> Любое умышленное изменение информации, хранящейся в вычислительной системе или передаваемой из одной системы в другую – это <span class="otv">Угроза целостности</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">30</span>  <span class="otv">ТехЗ КИ</span> выполнение работ и (или) оказание услуг по ее защите от несанкционированного доступа, от утечки по техническим каналам, а также от специальных воздействий на такую информацию в целях ее уничтожения, искажения или блокирования доступа к ней.
+			<span class="first">30</span>  <span class="otv">Техническая защита конфиденциальной информации</span> выполнение работ и (или) оказание услуг по ее защите от несанкционированного доступа, от утечки по техническим каналам, а также от специальных воздействий на такую информацию в целях ее уничтожения, искажения или блокирования доступа к ней.
+		</div>
+		<div class="qwe-2">
+			<span class="first">31</span><span class="otv">Цифровая подпись (ЦП)</span>позволяет подтвердить авторство электронного документа (будь то реальное лицо или, например, аккаунт в криптовалютной системе). Подпись связана как с автором, так и с самим документом с помощью криптографических методов, и не может быть подделана с помощью обычного копирования.
+		</div>
+		<div class="qwe-2">
+			<span class="first">32</span>Уникальное количество информации, позволяющее различать индивидуальных пользователей парольной системы - это<span class="otv">Идентификатор</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">33</span><span class="otv">Криптографическая защита информации</span>это механизм защиты посредством шифрования данных для обеспечения информационной безопасности общества.
+		</div>
+		<div class="qwe-2">
+			<span class="first">34</span>Выберите основные субъекты обеспечения информационной безопасности Российской Федерации, объединенные в рамках государственной системы защиты информации.<span class="otv"><a data-toggle="collapse" href="#hide1">Раскрыть</a></span>
+				<div class="collapse in" id="hide1">
+					<br><br>
+			   		информация в форме сведений (свобода мысли, национальные культурные ценности);
+					<br><br>
+					· информация в форме сообщений (архивные документы; документы, являющиеся музейными предметами или составляющие музейные коллекции; тиражированные документы);
+					<br><br>
+					· информационная инфраструктура (сети связи и инфраструктура информатизации; инфраструктура средств массовой информации и книгоиздания; инфраструктура открытых информационных ресурсов библиотек, архивных и музейных фондов);
+					<br><br>
+					· правовой статус субъектов информационной сферы Российской Федерации (совокупность реальных прав и обязанностей субъектов).
+			  </div>
+		</div>
+		<div class="qwe-2">
+			<span class="first">35</span>В области формирования информационных ресурсов, подготовки и предоставления пользователям информационных продуктов, информационных услуг от несанкционированного доступа необходимо защищать<span class="otv">---------</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">36</span>В каком документе определена международная политика в сфере производства, распространения и потребления информации?<span class="otv">Хартией Глобального информационного общества, принятой в июле 2000 года в Окинаве (Япония).</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">37</span>Какие основные направления защиты информационной сферы?<span class="otv"><a data-toggle="collapse" href="#hide2">Раскрыть</a></span>
+				<div class="collapse in" id="hide2">
+					<br><br>
+			   		а) защита интересов личности, общества и государства от воздействия вредной, недоброкачественной информации; <br>
+			   		б) защита информации, информационных ресурсов и информационной системы от неправомерного воздействия различных субъектов; <br>
+			   		в) защита информационных прав.
+			  </div>
+		</div>
+		<div class="qwe-2">
+			<span class="first">38</span>На какие части подразделяются информационно-правовые нормы?<span class="otv"><a data-toggle="collapse" href="#hide3">Раскрыть</a></span>
+				<div class="collapse in" id="hide3">
+					<br><br>
+			   		Материальные информационно-правовые нормы и Процессуальные информационно-правовые нормы
+					<br><br>
+					Информационно-правовые нормы могут классифицироваться в зависимости от способов их воздействия на субъектов правоотношений. Здесь действуют две группы норм – диспозитивные и императивные.
+			  </div>
+		</div>
+		<div class="qwe-2">
+			<span class="first">39</span>Что входит в состав информационно-правовой нормы?<span class="otv">-------</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">40</span>Сколько существует форм допуска к государственной тайне?<span class="otv">3</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
+		</div>
+		<div class="qwe-2">
+			<span class="first"></span><span class="otv"></span>
 		</div>
 	</div>
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
