--- a/index.html
+++ b/index.html
@@ -160,58 +160,119 @@
 			<span class="first">40</span>Сколько существует форм допуска к государственной тайне?<span class="otv">3</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">41</span>Срок ограничения права на выезд в связи с ознакомлением сведений государственной тайн не должен превышатmь<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">42</span>Руководители предприятий, организаций и учреждений допускаются к секретным сведениям после проведения<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">43</span>Какие основные законы, регламентируют авторское право в области программного обеспечения?<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">44</span>Охраняется ли авторским правом заведомо вредоносная программа для ЭВМ?<span class="otv">ДА</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">45</span>Какой срок действия авторского если программа для ЭВМ или баз данных, выпущена в свет анонимно или под псевдонимом?<span class="otv">50 лет</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">46</span>В каком документе регулируются отношения, возникающие в связи с правовой охраной и использованием изобретений, полезных моделей и промышленных образцов?<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">47</span>Что не может относиться к коммерческой тайне?<span class="otv"><a data-toggle="collapse" href="#hide4">Раскрыть</a></span>
+			<div class="collapse in" id="hide4">
+					<br><br>
+			   		· данные в учредительных документах компании, а также ЕГРЮЛ и ЕГРИП;
+					<br><br>
+					· документы, дающие право заниматься бизнесом;
+					<br><br>
+					· информация о загрязнении окружающей среды, состоянии противопожарной безопасности и т. д.;
+					<br><br>
+					· условия труда в компании (численность, состав работников, система оплаты труда, наличие свободных рабочих мест и т.п.);
+					<br><br>
+					· информация задолженность по выплате заработной платы и по иным социальным выплатам;
+					<br><br>
+					· данные о нарушениях законодательства РФ и фактах привлечения к ответственности;
+					<br><br>
+					· данные о перечне лиц, имеющих право действовать без доверенности от имени компании.
+			  </div>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">48</span>Все нормативные документы по охране объектов можно разделить несколько видов:<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">49</span>В каких документах определяется деятельность службы безопасности:<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">50</span>Как оценивается качество службы безопасности?<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">51</span>Сколько форм подтверждения соответствия выделено в ФЗ "О техническом регулировании"?<span class="otv">3 (Вроде)</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">52</span>Сертификация является частным случаем…<span class="otv">Подтверждения соответствия</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">53</span>Для работы в частной охранной деятельности руководитель организации обязан представить...<span class="otv"></span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">54</span>Выделите формы подтверждения соответствия, определенные в ФЗ "О техническом регулировании".<span class="otv"><a data-toggle="collapse" href="#hide5">Раскрыть</a></span>
+			<div class="collapse in" id="hide5">
+					<br><br>
+			   		· Добровольная сертификация;
+					<br><br>
+					· Декларирование соответствия
+			  </div>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">55</span>Выберите документ, на который полагаются в Российской Федерации в области защиты информации некриптографическими методами?<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">56</span>Из каких основных структур состоит служба безопасности?<span class="otv"><a href="#hide6" data-toggle="collapse">Раскрыть</a></span>
+			<div class="collapse in" id="hide6">
+				<br><br>
+				Режимное; <br>
+				сыскное; <br>
+				охранное; <br>
+				техническое; <br>
+				информационное; <br>
+				аналитическое<br>
+			</div>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">57</span>Основные обязанности, связанные с информационной защитой прописанные в уставе предприятия?<span class="otv"><a href="#hide7" data-toggle="collapse">Раскрыть</a></span>
+			<div class="collapse in" id="hide7">
+				<br><br>
+				· участвовать в разработке, тестировании и проектировании систем управления информационной безопасностью
+				<br><br>		
+				· организовывать и поддерживать выполнение комплекса мер по информационной безопасности
+				<br><br>		
+				· использовать нормативные правовые документы в своей профессиональной деятельности
+				<br><br>
+				· проводить анализ информационной безопасности объектов и систем с использованием отечественных и зарубежных стандартов
+				<br><br>
+				· организовать работу коллектива исполнителей с учетом требований защиты информации
+				<br><br>
+				(Под вопросом?????) Но вроде то
+			</div>
 		</div>
 		<div class="qwe-2">
-			<span class="first"></span><span class="otv"></span>
+			<span class="first">58</span>Кому подчиняется служба безопасности?<span class="otv"><a href="#hide8" data-toggle="collapse">Раскрыть</a></span>
+			<div class="collapse in" id="hide8">
+				<br><br>
+				Руководство деятельностью федеральной службы безопасности осуществляется Президентом Российской Федерации
+				<br><br>
+				В организации ген.Директору
+			</div>
+		</div>
+		<div class="qwe-2">
+			<span class="first">59</span>Какие внутренние документы организации, используют для регулирования правовых отношений по защите конфиденциальной информации?<span class="otv">-----------</span>
+		</div>
+		<div class="qwe-2">
+			<span class="first">60</span>Какую ответственность влечет за собой нарушение требований ФЗ N-149 "Об информации, информационных технологиях и о защите информации"?<span class="otv"><a href="#hide9" data-toggle="collapse">Раскрыть</a></span>
+			<div class="collapse in" id="hide9">
+				<br><br>
+				Дисциплинарную, гражданско-правовую, административную или уголовную ответственность
+			</div>
 		</div>
 	</div>
 
