--- a/index.html
+++ b/index.html
@@ -200,10 +200,20 @@
 			<span class="first">48</span>Все нормативные документы по охране объектов можно разделить несколько видов:<span class="otv">-----------</span>
 		</div>
 		<div class="qwe-2">
-			<span class="first">49</span>В каких документах определяется деятельность службы безопасности:<span class="otv">-----------</span>
+			<span class="first">49</span>В каких документах определяется деятельность службы безопасности:<span class="otv"><a data-toggle="collapse" href="#hide11">Раскрыть</a></span>
+			<div class="collapse in" id="hide4">
+				<br><br>
+				Закон РФ «О предприятиях и предпринимательской деятельности»<br>
+				ГК РФ<br>
+				Закон РФ «О частной детективной и охранной деятельности»
+			</div>
 		</div>
 		<div class="qwe-2">
-			<span class="first">50</span>Как оценивается качество службы безопасности?<span class="otv">-----------</span>
+			<span class="first">50</span>Как оценивается качество службы безопасности?<span class="otv"><a data-toggle="collapse" href="#hide10">Раскрыть</a></span>
+			<div class="collapse in" id="hide4">
+				<br><br>
+				Числом отраженных угроз к общему к общему числу реализованных угроз за определенный интервал времени
+			</div>
 		</div>
 		<div class="qwe-2">
 			<span class="first">51</span>Сколько форм подтверждения соответствия выделено в ФЗ "О техническом регулировании"?<span class="otv">3 (Вроде)</span>
